# nlp-tripadvisor-reviews

./: .gitignore  LICENSE  README.md  config.py  evaluation.py  generate.py  generate_reviews.py  pyproject.toml  requirements.txt  test_model.py  train.py  utils.py
configurations/FeedForward/: config.yaml
configurations/FeedForwardGeneration/: config.yml
configurations/LogisticRegression/: config.yaml
configurations/Lstm/: config.yml
configurations/NaiveBayes/: config.yml
configurations/Ngram/: config.yml
configurations/PreTrained/: config.yml
configurations/PreTrainedGenerative/: config.yml
configurations/Rnn_Classification/: config.yaml
configurations/Rnn_Generative/: config.yaml
configurations/Transformer/: config.yaml  config.yml
data/: dataprep.ipynb  dataprep.py  eda_dataprep.ipynb  hackapromt_dataset.ipynb
data/augmentation/: DataAugmentation.py
data/datasets/: TextDataset.py  TripAdvisorDataset.py
data/tokenizers/: base.py  bpe.py
examples/FeedForward/: best_model.pt  config.yml  train_metrics.json
examples/FeedForwardGeneration/: best_model.pt  config.yml  train_metrics.json
examples/LogisticRegression/: config.yml  train_metrics.json
examples/Lstm/: config.yml
examples/NaiveBayes/: config.yml
examples/Ngram/: config.yml
examples/PreTrained/: config.yml
examples/PreTrainedGenerative/: config.yml
models/: base.py  base_pytorch.py
notebooks/: data_aug.ipynb  dataprep.ipynb  eda_dataprep.ipynb  unsupervised_analysis.ipynb  word_2_vec.ipynb
src/: main.py
vectorizers/: base.py  tfidf.py  word2vec.py
(+65 files in other folders)
