[project]
name = "nlp-tripadvisor"
version = "0.1.0"
description = "NLP project on TripAdvisor reviews"
authors = [
    { name = "Arthur Courselle", email = "arthur.courselle@epita.fr" },
    { name = "Eugenie Beauvillain", email = "eugenie.beauvillain@epita.fr" },
    { name = "Yanis Martin", email = "yanis.martin@epita.fr" },
    { name = "Flavien Geoffray", email = "flavien.geoffray@epita.fr" },
    { name = "Lucas Duport", email = "lucas.duport@epita.fr" }
]
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "datasets==3.6.0",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "nltk==3.9.1",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "scipy==1.13.1",
    "numpy==1.26.4",
    "torchmetrics==1.7.1",
    "gensim==4.3.3",
    "accelerate==1.6.0",
    "nlpaug==1.1.11",
    "bert-score==0.3.13",
    "evaluate==0.4.3",
    "sacrebleu==2.5.1",
    "rouge-score==0.1.2",
    "ruff>=0.14.0",
]
